--- a/languages/ar.ini
+++ b/languages/ar.ini
@@ -65,7 +65,6 @@ All = "الكل"
 All Fields = "كل الحقول"
 All Pages Loaded = "تم تحميل كل الصفحات"
 All Text = "كل النص"
-all_saved_items = "المفضلة"
 alphabrowse_matches = "النتائج"
 alphabrowselink_html = 'استعرض المداخل حسب %%index%% ابتداءً بـ <a href="%%url%%">%%from%%</a>.'
 Always ask me = "اسألني دائماً"
@@ -1169,6 +1168,7 @@ Save Comment = "حفظ التعليق"
 save_search = "حفظ البحث"
 save_search_remove = "حذف البحث المحفوظ"
 Saved in = "محفوظ في"
+saved_items = "المفضلة"
 schedule_daily = "يوميًا"
 schedule_explanation = "تلقي تنبيهات عبر البريد الإلكتروني حول النتائج الجديدة للبحث."
 schedule_none = "لا شيء"
