--- a/languages/bn.ini
+++ b/languages/bn.ini
@@ -66,7 +66,6 @@ All = "সমস্ত"
 All Fields = "সমস্ত ক্ষেত্রসমূহ"
 All Pages Loaded = "সমস্ত পেজ লোডেড"
 All Text = "সমস্ত পাঠ"
-all_saved_items = "উপাদানটি সংরক্ষন করা হয়েছে"
 alphabrowse_matches = "ফলাফল"
 alphabrowselink_html = '<a href="%%url%%">%%from%%</a> থেকে শুরু করে %%index%% দ্বারা ব্রাউজ করুন।'
 Always ask me = "সব সময় আমাকে জিজ্ঞেস করুন"
@@ -1170,6 +1169,7 @@ Save Comment = "মন্তব্য সংরক্ষণ করুন"
 save_search = "অনুসন্ধান সংরক্ষণ করুন"
 save_search_remove = "সংরক্ষিত অনুসন্ধান মুছুন"
 Saved in = "সংরক্ষণ করুন"
+saved_items = "উপাদানটি সংরক্ষন করা হয়েছে"
 schedule_daily = "দৈনন্দিন"
 schedule_explanation = "অনুসন্ধানের জন্য নতুন ফলাফল সম্পর্কিত ই-মেলগুলি পান।"
 schedule_none = "কোনটি নয়"
