--- a/languages/ca.ini
+++ b/languages/ca.ini
@@ -76,7 +76,6 @@ All = "All"
 All Fields = "Tots els camps"
 All Pages Loaded = "S'han carregat totes les pàgines"
 All Text = "Tot el text"
-all_saved_items = "Favorits"
 alphabrowse_matches = "Resultats"
 alphabrowselink_html = 'Revisar registres per %%index%% desde fins <a href="%%url%%">%%from%%</a>.'
 Always ask me = "Pregunta sempre"
@@ -1180,6 +1179,7 @@ Save Comment = "Guardar comentari"
 save_search = "Guardar cerca"
 save_search_remove = "Eliminar la cerca guardada"
 Saved in = "Guardat en"
+saved_items = "Favorits"
 schedule_daily = "Diària"
 schedule_explanation = "Rebre correus electrònics d'alerta sobre els nous resultats de la cerca."
 schedule_none = "Cap"
