--- a/languages/cs.ini
+++ b/languages/cs.ini
@@ -63,7 +63,6 @@ All = "Vše"
 All Fields = "Vše"
 All Pages Loaded = "Všechny stránky nahrány"
 All Text = "Vše"
-all_saved_items = "Oblíbené"
 alphabrowse_matches = "Výsledky"
 alphabrowselink_html = 'Procházet záznamy podle %%index%% od <a href="%%url%%">%%from%%</a>.'
 Always ask me = "Pokaždé se zeptat"
@@ -1168,6 +1167,7 @@ Save Comment = "Uložte komentář"
 save_search = "Uložit hledání"
 save_search_remove = "Odstranit uložené hledání"
 Saved in = "Uloženo v"
+saved_items = "Oblíbené"
 schedule_daily = "Denně"
 schedule_explanation = "Nechte si zasílat nové výsledky vyhledávání na Váš e-mail."
 schedule_none = "Nikdy"
