--- a/languages/cy.ini
+++ b/languages/cy.ini
@@ -61,7 +61,6 @@ All = "Popeth"
 All Fields = "Pob Maes"
 All Pages Loaded = "Llwythwyd yr holl dudalennau"
 All Text = "Yr holl destun"
-all_saved_items = "Ffefrynnau"
 alphabrowse_matches = "Canlyniadau"
 alphabrowselink_html = "Pori cofnodion ar sail %%index%% gan ddechrau o"
 An error has occurred = "Mae gwall wedi digwydd"
@@ -1021,6 +1020,7 @@ Save Comment = "Cadw Sylwadau"
 save_search = "Cadw'r Chwiliad"
 save_search_remove = "Gwaredu'r Chwiliad a Gadwyd"
 Saved in = "Wedi'i Gadw mewn"
+saved_items = "Ffefrynnau"
 schedule_daily = "Bob dydd"
 schedule_explanation = "Derbyn e-byst hysbysu am ganlyniadau newydd ar gyfer chwiliad."
 schedule_none = "Dim"
