--- a/languages/da.ini
+++ b/languages/da.ini
@@ -55,7 +55,6 @@ advSearchError_noRights = "Vi beklager, men du har ikke tilladelse til at redige
 advSearchError_notAdvanced = "Den søgning du ønsker at redigere er ikke en udvidet søgning."
 advSearchError_notFound = "Den ønskede søgning blev ikke fundet”"
 All Fields = "Alle Felter"
-all_saved_items = "Favoritter"
 alphabrowse_matches = "Resultater"
 An error has occurred = "Der er sket en fejl"
 AND = "OG"
@@ -537,6 +536,7 @@ Save = "Gem"
 Save Comment = "Gem kommentar"
 save_search = "Gem søgning"
 save_search_remove = "Fjern gemt søgning"
+saved_items = "Favoritter"
 scholarly_limit = "Afgræns til artikler fra fagtidsskrifter"
 Search = "Søg"
 Search For = "Søg efter"
