--- a/languages/de.ini
+++ b/languages/de.ini
@@ -64,7 +64,6 @@ All = "Alles"
 All Fields = "Alle Felder"
 All Pages Loaded = "Alle Seiten geladen"
 All Text = "Alle Textfelder und Volltext"
-all_saved_items = "Favoriten"
 alphabrowse_matches = "Ergebnis"
 alphabrowselink_html = 'Einträge nach %%index%% ansehen ab <a href="%%url%%">%%from%%</a>.'
 Always ask me = "Immer nachfragen"
@@ -1187,6 +1186,7 @@ Save Comment = "Kommentar speichern"
 save_search = "Suche speichern"
 save_search_remove = "Lösche gespeicherte Suche"
 Saved in = "Gespeichert in"
+saved_items = "Favoriten"
 schedule_daily = "Täglich"
 schedule_explanation = "Alerts für eine Suche per E-Mail erhalten."
 schedule_none = "Nie"
