--- a/languages/en.ini
+++ b/languages/en.ini
@@ -64,7 +64,6 @@ All = "All"
 All Fields = "All Fields"
 All Pages Loaded = "All Pages Loaded"
 All Text = "All Text"
-all_saved_items = "All Saved Items"
 alphabrowse_matches = "Results"
 alphabrowselink_html = 'Browse entries by %%index%% starting from <a href="%%url%%">%%from%%</a>.'
 Always ask me = "Always ask me"
@@ -1213,6 +1212,7 @@ save_search = "Save Search"
 save_search_remove = "Remove Saved Search"
 Saved in = "Saved in"
 Saved Logins = "Saved Logins"
+saved_items = "Saved Items"
 saved_login_actions = "Actions"
 saved_login_platform_and_browser = "Platform / Browser"
 schedule_daily = "Daily"
