--- a/languages/es.ini
+++ b/languages/es.ini
@@ -65,7 +65,6 @@ All = "Todo"
 All Fields = "Todos los Campos"
 All Pages Loaded = "Todas las páginas cargadas"
 All Text = "Todo el Texto"
-all_saved_items = "Favoritos"
 alphabrowse_matches = "Resultados"
 alphabrowselink_html = 'Navegar por las entradas %%index%% iniciando desde <a href="%%url%%">%%from%%</a>.'
 Always ask me = "Siempre pregúntame"
@@ -1169,6 +1168,7 @@ Save Comment = "Guardar comentario"
 save_search = "Guardar Búsqueda"
 save_search_remove = "Borrar Búsquedas guardadas"
 Saved in = "Guardado en"
+saved_items = "Favoritos"
 schedule_daily = "Diario"
 schedule_explanation = "Reciba correos electrónicos de alerta sobre nuevos resultados para la búsqueda."
 schedule_none = "Ninguno"
