--- a/languages/eu.ini
+++ b/languages/eu.ini
@@ -680,7 +680,6 @@ All = "Guztiak"
 All Fields = "Eremu guztiak"
 All Pages Loaded = "Orri guztiak kargatuta"
 All Text = "Testu osoa"
-all_saved_items = "Gogokoenak"
 alphabrowse_matches = "Emaitzak"
 alphabrowselink_html = 'Bilatu %%index%% hasiera honekin <a href="%%url%%">%%from%%</a>.'
 An error has occurred = "Errore bat gertatu da"
@@ -1519,6 +1518,7 @@ Save Comment = "Iruzkina gorde"
 save_search = "Bilaketa gorde"
 save_search_remove = "Ezabatu"
 Saved in = "Gorde"
+saved_items = "Gogokoenak"
 scholarly_limit = "Mugatu artikuluak gaiaren arabera"
 Scroll to Load More = "Erabili korritze-barra gehiago kargatzeko"
 Search = "Bilatu"
