--- a/languages/fr.ini
+++ b/languages/fr.ini
@@ -64,7 +64,6 @@ All = "Tout"
 All Fields = "Tous les champs"
 All Pages Loaded = "Toutes les pages chargées"
 All Text = "Tout le texte"
-all_saved_items = "Favoris"
 alphabrowse_matches = "Résultats"
 alphabrowselink_html = 'Parcourir par %%index%% à partir de <a href="%%url%%">%%from%%</a>.'
 Always ask me = "Toujours me demander"
@@ -1168,6 +1167,7 @@ Save Comment = "Sauvegarder le commentaire"
 save_search = "Enregistrer la recherche"
 save_search_remove = "Effacer la recherche"
 Saved in = "Enregistré dans"
+saved_items = "Favoris"
 schedule_daily = "Une fois par jour"
 schedule_explanation = "Recevoir des courriels d'alerte en cas de nouveaux résultats pour une recherche."
 schedule_none = "Jamais"
