--- a/languages/ga.ini
+++ b/languages/ga.ini
@@ -64,7 +64,6 @@ All = "Gach ceann"
 All Fields = "Gach réimse"
 All Pages Loaded = "Gach leathanach lódáilte"
 All Text = "Gach téacs"
-all_saved_items = "Ceanáin"
 alphabrowse_matches = "Teidil"
 alphabrowselink_html = 'Brabhsáil iontrálacha de réir %%index%%, <a href="%%url%%">%%from%%</a> ar dtús.'
 Always ask me = "Cuir ceist orm i gcónaí"
@@ -1166,6 +1165,7 @@ Save Comment = "Sábháil an trácht"
 save_search = "Sábháil an cuardach"
 save_search_remove = "Bain an cuardach sábháilte"
 Saved in = "Sábháilte in"
+saved_items = "Ceanáin"
 schedule_daily = "Laethúil"
 schedule_explanation = "Faigh r-phoist foláirimh nuair a fhaightear torthaí nua ar an gcuardach."
 schedule_none = "Dada"
