--- a/languages/gl.ini
+++ b/languages/gl.ini
@@ -51,7 +51,6 @@ All = "Todo"
 All Fields = "Todos os campos"
 All Pages Loaded = "Todas as páxinas cargadas"
 All Text = "Todo o texto"
-all_saved_items = "Favoritos"
 alphabrowse_matches = "Resultados"
 alphabrowselink_html = 'Navegar polas entradas %%index%% iniciando desde  <a href="%%url%%">%%from%%</a>.'
 An error has occurred = "Ocorreu un erro"
@@ -801,6 +800,7 @@ Save Comment = "Gardar comentario"
 save_search = "Gardar procuras"
 save_search_remove = "Borrar Procuras gardadas"
 Saved in = "Gardado en"
+saved_items = "Favoritos"
 scholarly_limit = "Limitar os artigos por campo académico"
 Scroll to Load More = "Deslizar para ver máis"
 Search = "Buscar"
