--- a/languages/he.ini
+++ b/languages/he.ini
@@ -45,7 +45,6 @@ advSearchError_notAdvanced = "החיפוש שבקשת לערוך אינו חיפ
 advSearchError_notFound = "החיפוש שביקשת לא נמצא"
 All Fields = "כל השדות"
 All Pages Loaded = "כל העמודים נטענו"
-all_saved_items = "מועדפים"
 alphabrowse_matches = "תוצאות"
 An error has occurred = "ארעה שגיאה"
 AND = "וגם"
@@ -610,6 +609,7 @@ Save Comment = "שמירת הערה"
 save_search = "שמירת חיפוש"
 save_search_remove = "מחיקת חיפוש שמור"
 Saved in = "שמור ב"
+saved_items = "מועדפים"
 scholarly_limit = "הגבלה למאמרים מכתבי-עת אקדמים"
 Scroll to Load More = "לגלול כדי לצפות בעוד רשומות"
 Search = "חיפוש"
