--- a/languages/hi.ini
+++ b/languages/hi.ini
@@ -66,7 +66,6 @@ All = "सभी"
 All Fields = "सभी फ़ील्ड्स"
 All Pages Loaded = "सभी पेज लोड किए गए"
 All Text = "पूरा टेक्स्ट"
-all_saved_items = "बची हुई वस्तुएँ"
 alphabrowse_matches = "परिणाम"
 alphabrowselink_html = 'प्रविष्टियों को ब्राउज़ करें %%index%% से शुरू <a href="%%url%%">%%from%%</a>.'
 Always ask me = "हमेशा मुझसे पूछो"
@@ -1170,6 +1169,7 @@ Save Comment = "टिप्पणी सहेजें"
 save_search = "खोज संग्रहित करें"
 save_search_remove = "सहेजे गए खोज निकालें"
 Saved in = "में बचाया"
+saved_items = "बची हुई वस्तुएँ"
 schedule_daily = "दैनिक"
 schedule_explanation = "खोज के नए परिणामों के बारे में अलर्ट ईमेल से प्राप्त करें।"
 schedule_none = "कोई नहीं"
