--- a/languages/hr.ini
+++ b/languages/hr.ini
@@ -65,7 +65,6 @@ All = "Sve"
 All Fields = "Sva polja"
 All Pages Loaded = "Sve stranice učitane"
 All Text = "Sav tekst"
-all_saved_items = "Favoriti"
 alphabrowse_matches = "Rezultati"
 alphabrowselink_html = 'Pregledaj unose prema %%index%%, počevši od <a href="%%url%%">%%from%%</a>.'
 Always ask me = "Uvijek me pitaj"
@@ -1169,6 +1168,7 @@ Save Comment = "Spremi komentar"
 save_search = "Spremi pretragu"
 save_search_remove = "Ukloni spremljenu pretragu"
 Saved in = "Spremljeno u"
+saved_items = "Favoriti"
 schedule_daily = "Dnevno"
 schedule_explanation = "Primaj e-mailove upozorenja o novim rezultatima za pretragu."
 schedule_none = "Bez"
