--- a/languages/hy.ini
+++ b/languages/hy.ini
@@ -64,7 +64,6 @@ All = "Բոլորը"
 All Fields = "Բոլոր դաշտերը"
 All Pages Loaded = "Բոլոր էջերը բեռնված են"
 All Text = "Ամբողջ տեքստը"
-all_saved_items = "Պահպանված նյութեր"
 alphabrowse_matches = "Արդյունքներ"
 alphabrowselink_html = 'Դիտիր մուտքերը ըստ %%index%% սկսած սրանից <a href="%%url%%">%%from%%</a>.'
 Always ask me = "Միշտ ինձ հարցրու"
@@ -1168,6 +1167,7 @@ Save Comment = "Պահպանել մեկնաբանությունը"
 save_search = "Պահպանել որոնումը"
 save_search_remove = "Հեռացնել պահպանված որոնումը"
 Saved in = "Պահպանված է"
+saved_items = "Պահպանված նյութեր"
 schedule_daily = "Ամենօրյա"
 schedule_explanation = "Ստացեք ծանուցման նամակներ որոնման նոր արդյունքների մասին:"
 schedule_none = "Ոչ ոք"
