--- a/languages/ja.ini
+++ b/languages/ja.ini
@@ -65,7 +65,6 @@ All = "すべて"
 All Fields = "全フィールド"
 All Pages Loaded = "全ページロードされました"
 All Text = "すべてのテキスト"
-all_saved_items = "お気に入り"
 alphabrowse_matches = "結果"
 alphabrowselink_html = '%%index%%を<a href="%%url%%">%%from%%</a>からブラウズ'
 Always ask me = "常に確認"
@@ -1169,6 +1168,7 @@ Save Comment = "コメントの保存"
 save_search = "検索の保存"
 save_search_remove = "保存した検索の削除"
 Saved in = "保存先"
+saved_items = "お気に入り"
 schedule_daily = "日次"
 schedule_explanation = "新たな検索結果の通知メールを受け取る。"
 schedule_none = "なし"
