--- a/languages/mi.ini
+++ b/languages/mi.ini
@@ -37,7 +37,6 @@ All = "Katoa"
 All Fields = "Ngā āpure katoa"
 All Pages Loaded = "Kua utaina ngā whārangi katoa"
 All Text = "Ngā kuputuhi katoa"
-all_saved_items = "Ngā tūemi i tiakina"
 An error has occurred = "Kua puta mai tētahi hapa"
 An error occurred during execution; please try again later. = "Kua hapa te whakahaere; me ngana anō ā muri ake."
 AND = "AND"
@@ -686,6 +685,7 @@ Save Comment = "Tiaki tākupu"
 save_search = "Tiaki rapu"
 save_search_remove = "Tangohia te rapu kua tiakina"
 Saved in = "I tiakina i"
+saved_items = "Ngā tūemi i tiakina"
 scholarly_limit = "Whakawhāiti ki ngā tuhinga mai i ngā hautaka pūmātauranga"
 Scroll to Load More = "Panuku ki te uta i ētahi atu anō"
 Search = "Rapu"
