--- a/languages/mn.ini
+++ b/languages/mn.ini
@@ -62,7 +62,6 @@ All = "Бүх"
 All Fields = "Бүх талбарууд"
 All Pages Loaded = "Бүх хуудсыг ачааллаа"
 All Text = "Бүх текст"
-all_saved_items = "Хадгалсан зүйлс"
 alphabrowse_matches = "Үр дүнгүүд"
 alphabrowselink_html = 'Browse entries by %%index%% starting from <a href="%%url%%">%%from%%</a>-с эхэлсэн %%index%%-н оруулсан интернэт хөтчийн оруулгууд.'
 Always ask me = "Үргэлж надаас асуугаарай"
@@ -1165,6 +1164,7 @@ Save Comment = "Сэтгэгдэл хадгалах"
 save_search = "Хайлтыг хадгалах"
 save_search_remove = "Хадгалсан хайлтыг устгах"
 Saved in = "-д хадгалсан"
+saved_items = "Хадгалсан зүйлс"
 schedule_daily = "Өдөр тутмын"
 schedule_explanation = "Хайлтанд зориулсан шинэ үр дүнгийн талаар сэрэмжлүүлэх цахим шуудан хүлээн авах."
 schedule_none = "Байхгүй"
