--- a/languages/nl.ini
+++ b/languages/nl.ini
@@ -62,7 +62,6 @@ All = "Alle"
 All Fields = "Alle velden"
 All Pages Loaded = "Alle pagina's zijn ingeladen"
 All Text = "Alle tekst"
-all_saved_items = "Favorieten"
 alphabrowse_matches = "Resultaten"
 alphabrowselink_html = "Doorblader de catalogus met %%index%% beginnend vanaf %%from%%."
 An error has occurred = "Er is een fout opgetreden"
@@ -1061,6 +1060,7 @@ Save Comment = "Sla commentaar op"
 save_search = "Sla zoekopdracht op"
 save_search_remove = "Verwijder opgeslagen zoekopdracht"
 Saved in = "Bewaard in"
+saved_items = "Favorieten"
 schedule_daily = "Dagelijks"
 schedule_explanation = "Ontvang meldingen over nieuwe resultaten voor je zoekopdracht"
 schedule_none = "Geen"
