--- a/languages/pl.ini
+++ b/languages/pl.ini
@@ -123,7 +123,6 @@ All = "wszystko"
 All Fields = "Wszystkie pola"
 All Pages Loaded = "Wszystkie strony są załadowane."
 All Text = "Cały tekst"
-all_saved_items = "Ulubione książki"
 alphabrowse_matches = "Rezultat"
 alphabrowselink_html = 'Przeglądaj zapisy według %%index%% zaczynając od <a href="%%url%%">%%from%%</a>.'
 An error has occurred = "Wystąpił błąd."
@@ -1122,6 +1121,7 @@ Save Comment = "Zapisz komentarz"
 save_search = "Zapisz wyszukiwanie"
 save_search_remove = "Usuń zapisane wyszukiwanie"
 Saved in = "Zapisane w"
+saved_items = "Ulubione książki"
 schedule_daily = "dzienny"
 schedule_explanation = "Otrzymuj powiadomienia poprzez e-maila o nowych wynikach wyszukiwania."
 schedule_none = "Żaden"
