--- a/languages/pt-br.ini
+++ b/languages/pt-br.ini
@@ -64,7 +64,6 @@ All = "Todos"
 All Fields = "Todos os campos"
 All Pages Loaded = "Todas as páginas carregadas"
 All Text = "TODO Texto"
-all_saved_items = "Itens Guardados"
 alphabrowse_matches = "Resultados"
 alphabrowselink_html = 'Visualizar entradas pelo %%index%% iniciando com <a href="%%url%%">%%from%%</a>.'
 Always ask me = "Sempre me pergunte"
@@ -1168,6 +1167,7 @@ Save Comment = "Gravar comentário"
 save_search = "Salvar a busca"
 save_search_remove = "Apagar a busca guardada"
 Saved in = "Na minha lista"
+saved_items = "Itens Guardados"
 schedule_daily = "Diariamente"
 schedule_explanation = "Receber e-mails de alerta sobre novos resultados para pesquisa."
 schedule_none = "Nenhum"
