--- a/languages/pt.ini
+++ b/languages/pt.ini
@@ -50,7 +50,6 @@ All = "Todos"
 All Fields = "Palavra solta"
 All Pages Loaded = "Todas as páginas carregadas"
 All Text = "Todo o Texto"
-all_saved_items = "Favoritos"
 alphabrowse_matches = "Resultados"
 An error has occurred = "Erro na aplicação"
 An error occurred during execution; please try again later. = "Ocorreu um erro durante a execução; por favor, tente novamente mais tarde."
@@ -777,6 +776,7 @@ Save Comment = "Gravar comentário"
 save_search = "Guardar a pesquisa"
 save_search_remove = "Apagar a pesquisa guardada"
 Saved in = "Na minha lista"
+saved_items = "Favoritos"
 scholarly_limit = "Limitar a artigos de periódicos científicos"
 Scroll to Load More = "Navegue para baixo para carregar mais"
 Search = "Pesquisa"
