--- a/languages/ru.ini
+++ b/languages/ru.ini
@@ -81,7 +81,6 @@ All = "Все"
 All Fields = "Все поля"
 All Pages Loaded = "Загружены все страницы"
 All Text = "Весь текст"
-all_saved_items = "Избранное"
 alphabrowse_matches = "Результаты"
 alphabrowselink_html = 'Просмотр записей по индексу %%index%%, начиная с <a href="%%url%%">%%from%%</a>.'
 Always ask me = "Всегда спрашивать меня"
@@ -1185,6 +1184,7 @@ Save Comment = "Сохранить комментарий"
 save_search = "Сохранить запрос"
 save_search_remove = "Удалить сохраненный запрос"
 Saved in = "Сохранить в"
+saved_items = "Избранное"
 schedule_daily = "Ежедневно"
 schedule_explanation = "Получать оповещения по электронной почте о новых результатах поиска."
 schedule_none = "Нет"
