--- a/languages/se.ini
+++ b/languages/se.ini
@@ -59,7 +59,6 @@ All = "Visot"
 All Fields = "Buot deaivamat"
 All Pages Loaded = "Visot siiddut láddejuvvon"
 All Text = "Visot deaksta"
-all_saved_items = "Oiddohat"
 alphabrowse_matches = "Bohtosat"
 alphabrowselink_html = 'Bláđe %%index%%- indeavssa nu ahte álggát sajis <a href="%%url%%">%%from%%</a>.'
 An error has occurred = "Dáhpáhuvai meattáhus"
@@ -1048,6 +1047,7 @@ Save Comment = "Furke kommeantta"
 save_search = "Furke ozu"
 save_search_remove = "Sihko furkejuvvon ozu"
 Saved in = "Furkejuvvon"
+saved_items = "Oiddohat"
 schedule_daily = "Beaivválaččat"
 schedule_explanation = "Vuostáváldde šleađgaboastailmmuhusaid ođđa ohcanbohtosiin."
 schedule_none = "Ii mihkkege"
