--- a/languages/sl.ini
+++ b/languages/sl.ini
@@ -45,7 +45,6 @@ advSearchError_notFound = "Nismo našli poizvedbe, ki ste jo zahtevali."
 All = "Vse"
 All Fields = "Vsa polja"
 All Pages Loaded = "Vse strani naložene"
-all_saved_items = "Priljubljene"
 alphabrowse_matches = "Rezultati"
 An error has occurred = "Pojavila se je napaka"
 AND = "IN"
@@ -648,6 +647,7 @@ Save Comment = "Shrani komentar"
 save_search = "Shrani iskanje"
 save_search_remove = "Odstrani shranjena iskanja"
 Saved in = "Shranjeno v"
+saved_items = "Priljubljene"
 scholarly_limit = "Omeji na članke iz znanstvenih časopisov"
 Scroll to Load More = "Naloži več"
 Search = "Išči"
