--- a/languages/sv.ini
+++ b/languages/sv.ini
@@ -63,7 +63,6 @@ All = "Alla"
 All Fields = "Alla fält"
 All Pages Loaded = "Alla sidor laddade"
 All Text = "All text"
-all_saved_items = "Favoriter"
 alphabrowse_matches = "Resultat"
 alphabrowselink_html = 'Bläddra efter %%index%% från <a href="%%url%%">%%from%%</a>.'
 Always ask me = "Fråga mig alltid"
@@ -1212,6 +1211,7 @@ save_search = "Spara sökningen"
 save_search_remove = "Radera den sparade sökningen"
 Saved in = "Sparad"
 Saved Logins = "Sparade inloggningar"
+saved_items = "Favoriter"
 saved_login_actions = "Åtgärder"
 saved_login_platform_and_browser = "Operativsystem / Webbläsare"
 schedule_daily = "Dagligen"
