--- a/languages/tr.ini
+++ b/languages/tr.ini
@@ -118,7 +118,6 @@ All = "Tümü"
 All Fields = "Tüm Alanlar"
 All Pages Loaded = "Bütün Sayfalar Yüklendi"
 All Text = "Tüm Metin"
-all_saved_items = "Favorilerim"
 alphabrowse_matches = "Sonuçlar"
 alphabrowselink_html = '<a href="%%url%%">%%from%%</a> başlayarak %%index%% tarafından oluşturulan girişleri listeleyin.'
 Always ask me = "Her zaman bana sor"
@@ -1222,6 +1221,7 @@ Save Comment = "Yorumunuzu saklayın"
 save_search = "Aramayı sakla"
 save_search_remove = "Saklanmış aramayı sil"
 Saved in = "Kaydedildi"
+saved_items = "Favorilerim"
 schedule_daily = "Günlük"
 schedule_explanation = "Arama için yeni sonuçlar hakkýnda uyarý e-postalarý alýn."
 schedule_none = "Hiç"
