--- a/languages/uk.ini
+++ b/languages/uk.ini
@@ -64,7 +64,6 @@ All = "Все"
 All Fields = "Всі поля"
 All Pages Loaded = "Всі завантажені сторінки"
 All Text = "Весь текст"
-all_saved_items = "Збережені ресурси"
 alphabrowse_matches = "Результати"
 alphabrowselink_html = 'Перегляд записів за %%index%%, починаючи з <a href="%%url%%">%%from%%</a>.'
 Always ask me = "Завжди запитувати мене"
@@ -1168,6 +1167,7 @@ Save Comment = "Зберегти коментар"
 save_search = "Зберегти пошук"
 save_search_remove = "Видалити збережений пошук"
 Saved in = "Збережено в"
+saved_items = "Збережені ресурси"
 schedule_daily = "Щодня"
 schedule_explanation = "Отримувати повідомлення Розсилки е-поштою про нові результати пошуку."
 schedule_none = "Не застосовувати"
