--- a/languages/vi.ini
+++ b/languages/vi.ini
@@ -61,7 +61,6 @@ All = "Tất cả"
 All Fields = "Tất cả các trường"
 All Pages Loaded = "Tải tất cả các trang"
 All Text = "Tất cả văn bản"
-all_saved_items = "Các mục đã lưu"
 alphabrowse_matches = "Kết quả"
 alphabrowselink_html = 'Mục duyệt nhanh bằng %%index%% bắt đầu từ <a href="%%url%%">%%from%%</a>.'
 An error has occurred = "Lỗi đã xảy ra"
@@ -1058,6 +1057,7 @@ Save Comment = "Lưu nhận xét"
 save_search = "Lưu tìm kiếm"
 save_search_remove = "Xóa Tìm kiếm đã Lưu"
 Saved in = "Đã lưu trong"
+saved_items = "Các mục đã lưu"
 schedule_daily = "Hằng ngày"
 schedule_explanation = "Nhận email thông báo về kết quả mới để tìm kiếm."
 schedule_none = "Không"
