--- a/languages/zh-cn.ini
+++ b/languages/zh-cn.ini
@@ -60,7 +60,6 @@ All = "全部"
 All Fields = "全文检索"
 All Pages Loaded = "所有页面加载"
 All Text = "所有字段"
-all_saved_items = "最爱"
 alphabrowse_matches = "结果"
 An error has occurred = "出现错误"
 An error occurred during execution; please try again later. = "执行过程中发生错误 请稍后再试."
@@ -655,6 +654,7 @@ Save = "保存"
 Save Comment = "保存评论"
 save_search = "保存搜索"
 save_search_remove = "删除保存的搜索"
+saved_items = "最爱"
 scholarly_limit = "限制从学术期刊的文章"
 Search = "检索"
 Search For = "检索"
