--- a/languages/el.ini
+++ b/languages/el.ini
@@ -65,7 +65,6 @@ All = "Όλα"
 All Fields = "Όλα τα πεδία"
 All Pages Loaded = "Η φόρτωση σελίδων ολοκληρώθηκε"
 All Text = "Οπουδήποτε στο κείμενο"
-all_saved_items = "Αγαπημένα"
 alphabrowse_matches = "Αποτελέσματα"
 alphabrowselink_html = 'Περιήγηση σε %%index%% ξεκινώντας από <a href="%%url%%">%%from%%</a>.'
 Always ask me = "Να γίνεται πάντα ερώτηση"
@@ -1166,6 +1165,7 @@ Save Comment = "Αποθήκευση σχολίου"
 save_search = "Αποθήκευση αναζήτησης"
 save_search_remove = "Κατάργηση αποθηκευμένης αναζήτησης"
 Saved in = "Αποθηκεύτηκε σε"
+saved_items = "Αγαπημένα"
 schedule_daily = "Ημερησίως"
 schedule_explanation = "Παραλαβή ειδοποιήσεων μέσω email για νέα αποτελέσματα σχετικά με την αναζήτηση."
 schedule_none = "Χωρίς"
