--- a/languages/fi.ini
+++ b/languages/fi.ini
@@ -63,7 +63,6 @@ All = "Kaikki"
 All Fields = "Kaikki kentät"
 All Pages Loaded = "Kaikki sivut ladattu"
 All Text = "Kaikki teksti"
-all_saved_items = "Suosikit"
 alphabrowse_matches = "Tulokset"
 alphabrowselink_html = 'Selaa %%index%%-indeksiä alkaen kohdasta <a href="%%url%%">%%from%%</a>.'
 Always ask me = "Kysy aina"
@@ -1212,6 +1211,7 @@ save_search = "Tallenna haku"
 save_search_remove = "Poista tallennettu haku"
 Saved in = "Tallennettuna"
 Saved Logins = "Tallennetut kirjautumiset"
+saved_items = "Suosikit"
 saved_login_actions = "Toiminnot"
 saved_login_platform_and_browser = "Käyttöjärjestelmä / Selain"
 schedule_daily = "Päivittäin"
