--- a/languages/it.ini
+++ b/languages/it.ini
@@ -64,7 +64,6 @@ All = "All"
 All Fields = "Tutti i Campi"
 All Pages Loaded = "Tutte le pagine caricate"
 All Text = "Tutto il testo"
-all_saved_items = "Elementi salvati"
 alphabrowse_matches = "Risultati"
 alphabrowselink_html = 'Naviga il catalogo per %%index%% partendo da <a href="%%url%%">%%from%%</a>.'
 Always ask me = "chiedimi sempre"
@@ -1168,6 +1167,7 @@ Save Comment = "Salva commento"
 save_search = "Salva la ricerca"
 save_search_remove = "Rimuovi la ricerca salvata"
 Saved in = "Salvato in"
+saved_items = "Elementi salvati"
 schedule_daily = "Giornaliera"
 schedule_explanation = "Ricevi notifiche via E-mail in caso di nuovi risultati per questa ricerca."
 schedule_none = "Nessuna"
