--- a/languages/zh.ini
+++ b/languages/zh.ini
@@ -41,7 +41,6 @@ advSearchError_noRights = "很抱歉，但你沒有權限編輯，搜索. 或許
 advSearchError_notAdvanced = "您所要求編輯的搜索不是一個高級搜索."
 advSearchError_notFound = "您所要求的搜索沒有找到."
 All Fields = "全文檢索"
-all_saved_items = "最愛"
 alphabrowse_matches = "結果"
 An error has occurred = "出現錯誤"
 AND = "和"
@@ -521,6 +520,7 @@ Save = "保存"
 Save Comment = "保存評論"
 save_search = "保存搜索"
 save_search_remove = "刪除保存的搜索"
+saved_items = "最愛"
 scholarly_limit = "限制從學術期刊的文章"
 Search = "檢索"
 Search For = "檢索"
