Remove redundant language codes; use aliases.

--- a/languages/ISO639-3/aliases.ini
+++ b/languages/ISO639-3/aliases.ini
@@ -154,7 +154,8 @@ Finnish = "fin"
 Finno-Ugrian _28Other_29 = "fiu"
 Fon = "fon"
 Formosan = "fox"
-French = "fre"
+fre = "fra"
+French = "fra"
 French, Middle _28ca. 1300-1600_29 = "frm"
 French, Old _28ca. 842-1300_29 = "fro"
 Frisian = "fry"
@@ -165,7 +166,8 @@ Ganda = "lug"
 Gayo = "gay"
 Gbaya = "gba"
 Georgian = "geo"
-German = "ger"
+ger = "deu"
+German = "deu"
 German, Middle High _28ca. 1050-1500_29 = "gmh"
 German, Old High _28ca. 750-1050_29 = "goh"
 Germanic _28Other_29 = "gem"
@@ -300,7 +302,8 @@ Mandingo = "man"
 Manipuri = "mni"
 Manobo languages = "mno"
 Manx = "glv"
-Maori = "mao"
+mao = "mri"
+Maori = "mri"
 Mapuche = "arn"
 Marathi = "mar"
 Mari = "chm"
