Add translation for Citations record field.

--- a/languages/en.ini
+++ b/languages/en.ini
@@ -229,6 +229,7 @@ Choose a Category to Begin Browsing = "Choose a Category to Begin Browsing"
 Choose a Column to Begin Browsing = "Choose a Column to Begin Browsing"
 Choose a List = "Choose a List"
 choose_login_method = "Please choose a login method:"
+Citations = "Citations"
 citation_issue_abbrev = "no."
 citation_multipage_abbrev = "pp."
 citation_singlepage_abbrev = "p."
