--- a/languages/fi.ini
+++ b/languages/fi.ini
@@ -228,6 +228,7 @@ Choose a Category to Begin Browsing = "Valitse kategoria aloittaaksesi selauksen
 Choose a Column to Begin Browsing = "Valitse sarake aloittaaksesi selaamisen"
 Choose a List = "Valitse lista"
 choose_login_method = "Valitse kirjautumistapa:"
+Citations = "Viittaukset"
 citation_issue_abbrev = "nro"
 citation_multipage_abbrev = "s."
 citation_singlepage_abbrev = "s."
