Add translation for Citations record field. (#3496)

--- a/languages/en.ini
+++ b/languages/en.ini
@@ -233,6 +233,7 @@ citation_issue_abbrev = "no."
 citation_multipage_abbrev = "pp."
 citation_singlepage_abbrev = "p."
 citation_volume_abbrev = "Vol."
+Citations = "Citations"
 Cite this = "Cite this"
 City = "City"
 Clear = "Clear"
