--- a/languages/sv.ini
+++ b/languages/sv.ini
@@ -232,6 +232,7 @@ citation_issue_abbrev = "nr"
 citation_multipage_abbrev = "ss."
 citation_singlepage_abbrev = "s."
 citation_volume_abbrev = "Vol."
+Citations = "Citat"
 Cite this = "Hänvisa"
 City = "Stad"
 Clear = "Tömma"
