--- a/languages/fi.ini
+++ b/languages/fi.ini
@@ -232,6 +232,7 @@ citation_issue_abbrev = "nro"
 citation_multipage_abbrev = "s."
 citation_singlepage_abbrev = "s."
 citation_volume_abbrev = "Vol."
+Citations = "Viittaukset"
 Cite this = "Sitaatti"
 City = "Kaupunki"
 Clear = "Tyhjennä"
