refactored controller action along with some other suggested fixes

--- a/languages/en.ini
+++ b/languages/en.ini
@@ -930,6 +930,7 @@ OAI Server = "OAI Server"
 Occupation = "Occupation"
 od_account_noaccess = "This library card does not have access to content in OverDrive."
 od_account_problem = "There is a problem with your account. %%message%%"
+od_admin_menu = "OverDrive API"
 od_audiobook-mp3 = "MP3 audiobook"
 od_audiobook-overdrive = "OverDrive Listen audiobook"
 od_avail_avail = "Available:"
@@ -954,7 +955,7 @@ od_code_contentnotavail = "This content is not available in your area."
 od_code_login_for_avail = "Login for availability"
 od_code_resource_not_found = "Title not found"
 od_content = "OverDrive Content"
-od_copies_available = "copies available"
+od_copies_available = "%%copies%% copies available"
 od_dl_formats = "Supported Download Formats"
 od_docheckout_failure = "This title could not be checked out."
 od_docheckout_success = "This title has been checked out to you. It expires on %%expireDate%%."
