--- a/languages/ISO639-3/aliases.ini
+++ b/languages/ISO639-3/aliases.ini
@@ -11,6 +11,7 @@ Ainu = "ain"
 Akan = "aka"
 Akkadian = "akk"
 Alacalufan = "aqa"
+alb = "sqi"
 Albanian = "sqi"
 Aleut = "ale"
 Algic = "aql"
@@ -27,7 +28,8 @@ Arapaho = "arp"
 Arauan = "auf"
 Arawak = "arw"
 Arawakan = "awd"
-Armenian = "hyx"
+arm = "hye"
+Armenian = "hye"
 Aromanian = "rup"
 Artificial _28Other_29 = "art"
 Assamese = "asm"
@@ -49,9 +51,10 @@ Bambara = "bam"
 Bamileke languages = "bai"
 Banda languages = "bad"
 Bantu _28Other_29 = "bnt"
+baq = "eus"
 Basa = "bas"
 Bashkir = "bak"
-Basque = "euq"
+Basque = "eus"
 Batak = "btk"
 Beja = "bej"
 Belarusian = "bel"
@@ -69,8 +72,9 @@ Braj = "bra"
 Breton = "bre"
 Bugis = "bug"
 Bulgarian = "bul"
+bur = "mya"
 Buriat = "bua"
-Burmese = "bur"
+Burmese = "mya"
 Caddo = "cad"
 Caddoan = "cdd"
 Carib = "car"
@@ -90,13 +94,14 @@ Cherokee = "chr"
 Cheyenne = "chy"
 Chibcha = "chb"
 Chibchan = "cba"
-Chinese = "zhx"
+Chinese = "zho"
 Chinook jargon = "chn"
 Chipewyan = "chp"
 Choctaw = "cho"
 Church Slavic = "chu"
 Chuukese = "chk"
 Chuvash = "chv"
+cld = "syc"
 Coptic = "cop"
 Cornish = "cor"
 Corsican = "cos"
@@ -107,9 +112,11 @@ Creoles and Pidgins, English-based _28Other_29 = "cpe"
 Creoles and Pidgins, French-based _28Other_29 = "cpf"
 Creoles and Pidgins, Portuguese-based _28Other_29 = "cpp"
 Crimean Tatar = "crh"
-Croatian = "scr"
+Croatian = "hrv"
 Cushitic _28Other_29 = "cus"
-Czech = "cze"
+cze = "ces"
+Czech = "ces"
+daf = "dnj"
 Dakota = "dak"
 Danish = "dan"
 Dargwa = "dar"
@@ -117,11 +124,13 @@ Dayak = "day"
 Delaware = "del"
 Dinka = "din"
 Divehi = "div"
+djl = "dze"
 Dogri = "doi"
 Dogrib = "dgr"
 Dravidian _28Other_29 = "dra"
 Duala = "dua"
-Dutch = "dut"
+dut = "nld"
+Dutch = "nld"
 Dutch, Middle _28ca. 1050-1350_29 = "dum"
 Dyula = "dyu"
 Dzongkha = "dzo"
@@ -132,6 +141,7 @@ Eastern Malayo-Polynesian = "pqe"
 Eastern Sudanic = "sdv"
 Edo = "bin"
 Efik = "efi"
+egx = "egy"
 Egyptian = "egy"
 Ekajuk = "eka"
 Elamite = "elx"
@@ -143,6 +153,7 @@ Eskimo-Aleut = "esx"
 Esperanto = "epo"
 Estonian = "est"
 Ethiopic = "gez"
+euq = "eus"
 Ewe = "ewe"
 Ewondo = "ewo"
 Fang = "fan"
@@ -165,7 +176,8 @@ Galician = "glg"
 Ganda = "lug"
 Gayo = "gay"
 Gbaya = "gba"
-Georgian = "geo"
+geo = "kat"
+Georgian = "kat"
 ger = "deu"
 German = "deu"
 German, Middle High _28ca. 1050-1500_29 = "gmh"
@@ -175,10 +187,11 @@ Gilbertese = "gil"
 Gondi = "gon"
 Gorontalo = "gor"
 Gothic = "got"
+gre = "ell"
 Grebo = "grb"
 Greek = "grk"
 Greek, Ancient _28to 1453_29 = "grc"
-Greek, Modern _281453-_29 = "gre"
+Greek, Modern _281453-_29 = "ell"
 Guarani = "grn"
 Gujarati = "guj"
 Gwich'in = "gwi"
@@ -198,8 +211,10 @@ Hmong-Mien = "hmx"
 Hokan = "hok"
 Hungarian = "hun"
 Hupa = "hup"
+hyx = "hye"
 Iban = "iba"
-Icelandic = "ice"
+ice = "isl"
+Icelandic = "isl"
 Ido = "ido"
 Igbo = "ibo"
 Ijo = "ijo"
@@ -221,8 +236,9 @@ Irish, Old _28to 1100_29 = "sga"
 Iroquoian _28Other_29 = "iro"
 Italian = "ita"
 Italic = "itc"
-Japanese = "jpx"
+Japanese = "jpn"
 Javanese = "jav"
+jpx = "jpn"
 Judeo-Arabic = "jrb"
 Judeo-Persian = "jpr"
 Kabardian = "kbd"
@@ -285,13 +301,14 @@ Luo _28Kenya and Tanzania_29 = "luo"
 Lushai = "lus"
 Luxembourgish = "ltz"
 Maasai = "mas"
-Macedonian = "mac"
+mac = "mkd"
+Macedonian = "mkd"
 Madurese = "mad"
 Magahi = "mag"
 Maithili = "mai"
 Makasar = "mak"
 Malagasy = "mlg"
-Malay = "may"
+Malay = "msa"
 Malayalam = "mal"
 Malayo-Polynesian = "poz"
 Maltese = "mlt"
@@ -309,6 +326,7 @@ Marathi = "mar"
 Mari = "chm"
 Marshallese = "mah"
 Marwari = "mwr"
+may = "msa"
 Mayan languages = "myn"
 Mende = "men"
 Micmac = "mic"
@@ -320,7 +338,7 @@ Moksha = "mdf"
 Moldavian = "mol"
 Mon-Khmer _28Other_29 = "mkh"
 Mongo-Nkundu = "lol"
-Mongolian = "xgn"
+Mongolian = "mon"
 Montenegrin = "cnr"
 Mooré = "mos"
 Multiple languages = "mul"
@@ -378,7 +396,8 @@ Pangasinan = "pag"
 Panjabi = "pan"
 Papiamento = "pap"
 Papuan _28Other_29 = "paa"
-Persian = "per"
+per = "fas"
+Persian = "fas"
 Philippine _28Other_29 = "phi"
 Phoenician = "phn"
 Pohnpeian = "pon"
@@ -396,7 +415,8 @@ Rarotongan = "rar"
 Reunionese, Reunion Creole = "rcf"
 Romance _28Other_29 = "roa"
 Romani = "rom"
-Romanian = "rum"
+Romanian = "ron"
+rum = "ron"
 Rundi = "run"
 Russian = "rus"
 Salishan languages = "sal"
@@ -410,8 +430,10 @@ Sanskrit = "san"
 Santali = "sat"
 Sardinian = "srd"
 Sasak = "sas"
+scc = "srp"
 Scots = "sco"
 Scottish Gaelic = "gla"
+scr = "hrv"
 Selkup = "sel"
 Semitic _28Other_29 = "sem"
 Serbian = "srp"
@@ -430,7 +452,8 @@ Siouan _28Other_29 = "sio"
 Skolt Sami = "sms"
 Slavey = "den"
 Slavic _28Other_29 = "sla"
-Slovak = "slo"
+slo = "slk"
+Slovak = "slk"
 Slovenian = "slv"
 Sogdian = "sog"
 Somali = "som"
@@ -467,7 +490,8 @@ Temne = "tem"
 Terena = "ter"
 Tetum = "tet"
 Thai = "tha"
-Tibetan = "tib"
+tib = "bod"
+Tibetan = "bod"
 Tibeto-Burman = "tbq"
 Tigrinya = "tir"
 Tigré = "tig"
@@ -512,18 +536,22 @@ Wakashan languages = "wak"
 Walloon = "wln"
 Waray = "war"
 Washoe = "was"
-Welsh = "wel"
+wel = "cym"
+Welsh = "cym"
 West Germanic = "gmw"
 West Slavic = "zlw"
 Western Malayo-Polynesian = "pqw"
 Western Pahari languages = "him"
+wit = "wnw"
 Wolayta = "wal"
 Wolof = "wol"
+xgn = "mon"
 Xhosa = "xho"
 Yakut = "sah"
 Yao _28Africa_29 = "yao"
 Yapese = "yap"
 Yiddish = "yid"
+yiy = "yyr"
 Yoruba = "yor"
 Yupik languages = "ypk"
 Zande languages = "znd"
@@ -531,5 +559,6 @@ Zapotec = "zap"
 Zaza = "zza"
 Zenaga = "zen"
 Zhuang = "zha"
+zhx = "zho"
 Zulu = "zul"
 Zuni = "zun"
