Restore missing codes.

--- a/languages/ISO639-3/fr.ini
+++ b/languages/ISO639-3/fr.ini
@@ -1580,6 +1580,7 @@ wls = "Wallisien"
 wmd = "Mamaindé"
 wmt = "Walmajarri"
 wmw = "Mwani"
+wnw = "Wintu"
 woe = "Woleai"
 wol = "wolof"
 wti = "Berta"
