--- a/languages/ISO639-3/gl.ini
+++ b/languages/ISO639-3/gl.ini
@@ -117,6 +117,7 @@ dan = "dinamarqués"
 deu = "alemán"
 div = "divehi"
 dlm = "Lingua dálmata"
+dze = "Lingua jiwarli"
 dzo = "dzongkha"
 efi = "ibibio"
 egy = "exipcio antigo"
