--- a/languages/ISO639-3/ru.ini
+++ b/languages/ISO639-3/ru.ini
@@ -262,6 +262,7 @@ dum = "средненидерландский"
 dyo = "дьола-фоньи"
 dyu = "Дьюла"
 dyy = "Тяпукай"
+dze = "Тьивали"
 dzo = "дзонг-кэ"
 ebu = "эмбу"
 ecy = "Этеокипрский язык"
@@ -1092,6 +1093,7 @@ wlm = "Средневаллийский язык"
 wln = "валлонский"
 wls = "Уоллисский язык"
 wmb = "Вампая"
+wnw = "Винту"
 woe = "Волеаи"
 wol = "волоф"
 wrm = "Языки варумунгу"
