--- a/languages/ISO639-3/sv.ini
+++ b/languages/ISO639-3/sv.ini
@@ -260,6 +260,7 @@ dyd = "Dyugun"
 dyo = "jola-fonyi"
 dyu = "dyula"
 dyy = "Dyaabugay"
+dze = "Djiwarli"
 dzg = "dazaga"
 dzo = "bhutanesiska (dzongkha)"
 ebg = "Ebughu"
