More minor cleanup.

--- a/languages/ISO639-3/fr.ini
+++ b/languages/ISO639-3/fr.ini
@@ -1700,7 +1700,7 @@ zea = "Zélandais"
 zen = "zénaga"
 zha = "zhuang"
 zhb = "Zhaba"
-zho = "chinois"
+zho = "Chinois"
 zia = "Zia"
 zil = "Zialo"
 zkk = "Karankawa"
