--- a/languages/ISO639-3/sv.ini
+++ b/languages/ISO639-3/sv.ini
@@ -1168,6 +1168,7 @@ yuc = "Yuchi"
 yue = "kantonesiska"
 yux = "Sydjukagiriska"
 yva = "Yawa"
+yyr = "Yir-yoront"
 zap = "zapotek"
 zbl = "Blissymboler"
 zea = "Zeeländska"
