More missing codes restored.

--- a/languages/ISO639-3/de.ini
+++ b/languages/ISO639-3/de.ini
@@ -365,6 +365,7 @@ dlg = "Dolganische Sprache"
 dlm = "Dalmatische Sprache"
 dmo = "Kemezung"
 dng = "Dunganische Sprache"
+dnj = "Dan"
 doi = "Dogri"
 doo = "Dongo"
 dow = "Doyayo"
