--- a/languages/ISO639-3/fr.ini
+++ b/languages/ISO639-3/fr.ini
@@ -392,6 +392,7 @@ dlg = "Dolgane"
 dlm = "Dalmate"
 dml = "Dameli"
 dng = "Doungane"
+dnj = "Dan"
 dny = "Dení"
 doi = "dogri (kangri)"
 dop = "Lokpa"
