--- a/languages/ISO639-3/pt.ini
+++ b/languages/ISO639-3/pt.ini
@@ -200,6 +200,7 @@ din = "Língua dinka"
 div = "divehi"
 dje = "Língua zarma"
 dlm = "Língua dálmata"
+dnj = "Língua dan"
 doi = "Língua dogri"
 drc = "Minderico"
 dsb = "Baixo sorábio"
