--- a/languages/ISO639-3/sv.ini
+++ b/languages/ISO639-3/sv.ini
@@ -240,6 +240,7 @@ dje = "zarma"
 djw = "Djawi"
 dlm = "Dalmatiska"
 dng = "Dungan"
+dnj = "Dan"
 doi = "dogri"
 dpe = "dari"
 dra = "dravidiskt språk"
