improved translations and error message

--- a/languages/de.ini
+++ b/languages/de.ini
@@ -453,7 +453,7 @@ external_auth_scope_address = "Lesezugriff auf Ihre Adressangaben"
 external_auth_scope_age = "Lesezugriff auf Ihre Altersangaben"
 external_auth_scope_birthdate = "Lesezugriff auf die Angabe Ihres Geburtsdatums"
 external_auth_scope_block_status = "Überprüfung, ob Ihr Konto gesperrt ist"
-external_auth_scope_cat_id = "Lesezugriff auf Ihre Benutzerkennung im Bibliothekskatalog"
+external_auth_scope_cat_id = "Lesezugriff auf Ihre Bibliotheksbenutzerkennung"
 external_auth_scope_email = "Lesezugriff auf Ihre E-Mail-Adresse"
 external_auth_scope_library_user_id = "Lesezugriff auf einen eindeutigen Hashwert auf der Grundlage Ihrer Bibliotheksbenutzerkennung"
 external_auth_scope_locale = "Lesezugriff auf Ihre bevorzugte Sprache"
