--- a/languages/en.ini
+++ b/languages/en.ini
@@ -463,7 +463,7 @@ external_auth_scope_address = "Read your address"
 external_auth_scope_age = "Read your age"
 external_auth_scope_birthdate = "Read your date of birth"
 external_auth_scope_block_status = "Check if your account has blocks"
-external_auth_scope_cat_id = "Read your catalog user identifier"
+external_auth_scope_cat_id = "Read your internal library user identifier"
 external_auth_scope_email = "Read your email address"
 external_auth_scope_library_user_id = "Read a unique hash based on your library user identifier"
 external_auth_scope_locale = "Read your active language"
