Cleaned up translations in templates and added translations to the language files.

--- a/languages/de.ini
+++ b/languages/de.ini
@@ -18,6 +18,7 @@ account_requests_other = "Anderer Status"
 Add a Library Card = "Bibliotheksausweis hinzufügen"
 Add a Library Card using login = "Hinzufügen einer Bibliothekskarte mit institutionellem Login"
 Add a Note = "Bemerkung hinzufügen"
+Add New Notification = "Neu"
 Add Tag = "Tag hinzufügen"
 Add Tags = "Tags hinzufügen"
 Add to another list = "Einer anderen Liste hinzufügen"
@@ -77,6 +78,7 @@ APA Edition Citation = "APA-Zitierstil (7. Ausg.)"
 applied_filter = "Aktivierter Filter:"
 applied_filters = "Aktivierte Filter:"
 Archival Material = "Archivmaterial"
+Are you sure you want to delete the following page? = "Sind Sie sicher, dass Sie den folgenden Eintrag löschen möchten?"
 Article = "Artikel"
 Ask a Librarian = "Fachauskunft der Bibliothek"
 Associated country = "Zugehöriges Land"
@@ -138,6 +140,13 @@ Borrowing Location = "Ausleihstelle"
 Braille = "Blindenschrift"
 Breadcrumbs = "Navigation"
 Brief View = "Übersicht"
+Broadcast = "Broadcast"
+Broadcasts = "Broadcasts"
+broadcasts_color = "Farbe"
+broadcasts_enddate = "Bis"
+broadcasts_startdate = "Von"
+broadcasts_visible = "Sichtbar auf der Startseite"
+broadcasts_visible_global = "Sichtbar auf jeder Seite"
 Browse = "Durchstöbern"
 Browse Alphabetically = "Alphabetisch durchstöbern"
 Browse for Authors = "Nach Verfasser durchstöbern"
@@ -237,6 +246,7 @@ clear_feedback_filter = "Filter aufheben"
 clear_selection = "Auswahl aufheben (%%count%%)"
 clear_tag_filter = "Filter aufheben"
 close = "schließen"
+Close broadcast for this session = "Broadcast für diese Sitzung schließen"
 Code = "Fehlercode"
 Collection = "Bestand"
 Collection Browse = "Bestand durchstöbern"
@@ -908,6 +918,10 @@ note_785_7 = "Fusioniert mit / Bildet"
 note_785_8 = "Wieder u.d.Tit."
 note_787 = "Andere Beziehung"
 Notes = "Anmerkungen"
+Notifications Broadcasts = "Notifications Broadcasts"
+Notifications Pages = "Notifications Pages"
+notifications_content = "Inhalt (<a href="https://www.markdownguide.org/basic-syntax/" target="_blank">Markdown</a>, <a href="https://packagist.org/packages/elgigi/commonmark-emoji" target="_blank">Emojis</a>)"
+notifications_tab_header = "Inhalt"
 Number = "Nummer"
 number_decimal_point = ","
 number_thousands_separator = "."
@@ -1000,6 +1014,14 @@ page_num = "Seite %%page%%"
 page_prev = "Zur vorherigen Seite"
 page_reload_on_deselect_hint = "Seite wird neu geladen, wenn Filter entfernt wird."
 page_reload_on_select_hint = "Seite wird neu geladen, wenn Filter aktiviert oder ausgeschlossen wird."
+Pages = "Pages"
+Pages Headline= "Überschrift"
+Pages Nav Title= "Titel"
+pages_headline = "Überschrift"
+pages_external_url = "Externe URL"
+pages_is_external_url = "Auf externe Seite verlinken"
+pages_nav_title = "Anzeige Navigation"
+pages_visible = "Sichtbar"
 pagination_label = "Seitenzahlen"
 Password = "Passwort"
 Password Again = "Passwort wiederholen"
