--- a/languages/en.ini
+++ b/languages/en.ini
@@ -18,6 +18,7 @@ account_requests_other = "Other Status"
 Add a Library Card = "Add a Library Card"
 Add a Library Card using login = "Add a Library Card using institutional Login"
 Add a Note = "Add a Note"
+Add New Notification = "New"
 Add Tag = "Add Tag"
 Add Tags = "Add Tags"
 Add to another list = "Add to another list"
@@ -77,6 +78,7 @@ APA Edition Citation = "APA (7th ed.) Citation"
 applied_filter = "Applied Filter:"
 applied_filters = "Applied Filters:"
 Archival Material = "Archival Material"
+Are you sure you want to delete the following page? = "Are you sure you want to delete the following page?"
 Article = "Article"
 Ask a Librarian = "Ask a Librarian"
 Associated country = "Associated country"
@@ -141,6 +143,13 @@ bound_with_intro = "The following works are all found in the book indicated by t
 Braille = "Braille"
 Breadcrumbs = "Breadcrumbs"
 Brief View = "Brief View"
+Broadcast = "Broadcast"
+Broadcasts = "Broadcasts"
+broadcasts_color = "Color"
+broadcasts_enddate = "To"
+broadcasts_startdate = "From"
+broadcasts_visible = "Visible on the home page"
+broadcasts_visible_global = "Visible on every page"
 Browse = "Browse"
 Browse Alphabetically = "Browse Alphabetically"
 Browse for Authors = "Browse for Authors"
@@ -240,6 +249,7 @@ clear_feedback_filter = "Clear Filter"
 clear_selection = "Clear Selection (%%count%%)"
 clear_tag_filter = "Clear Filter"
 close = "close"
+Close broadcast for this session = "Close broadcast for this session"
 Code = "Code"
 Collection = "Collection"
 Collection Browse = "Collection Browse"
@@ -922,6 +932,10 @@ note_785_7 = "Merged with / Forms"
 note_785_8 = "Changed back to"
 note_787 = "Other relationship"
 Notes = "Notes"
+Notifications Broadcasts = "Notifications Broadcasts"
+Notifications Pages = "Notifications Pages"
+notifications_content = "Content (<a href="https://www.markdownguide.org/basic-syntax/" target="_blank">Markdown</a>, <a href="https://packagist.org/packages/elgigi/commonmark-emoji" target="_blank">Emojis</a>)"
+notifications_tab_header = "Content"
 Number = "Number"
 number_decimal_point = "."
 number_thousands_separator = ","
@@ -1014,6 +1028,14 @@ page_num = "Page %%page%%"
 page_prev = "Go to Previous Page"
 page_reload_on_deselect_hint = "Page will reload when a filter is removed."
 page_reload_on_select_hint = "Page will reload when a filter is selected or excluded."
+Pages = "Pages"
+Pages Headline= "Headline"
+Pages Nav Title= "Title"
+pages_external_url = "External URL"
+pages_headline = "Headline"
+pages_is_external_url = "Link to exteral page"
+pages_nav_title = "Navigation title"
+pages_visible = "Visible"
 pagination_label = "Pagination"
 Password = "Password"
 Password Again = "Password Again"
